# poudriere

./: .cirrus.yml  .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  poudriere.8  zsh-completions
.builds/: freebsd.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build-aux/: test-driver
conf/: Makefile  poudriere.conf.sample  tinder.conf  tinderportmaster.rc
doc/: README.wiki  TODO.wiki  ccache.mkd  ccache.wiki  config.mkd  config.wiki  design.mkd  index.mkd  index.wiki  pkgng_repos.mkd  pkgng_repos.wiki  portmaster.mkd  portmaster.wiki  portshaker.mkd  portshaker.wiki  poudriere.8.wiki  poudriere_in_jail.mkd  poudriere_in_jail.wiki  relnotes.wiki  todo.mkd  todo.wiki  use_system_ports_tree.mkd  use_system_ports_tree.wiki  using_testport.mkd  using_testport.wiki
docs/: pkg_no_version_for_deps.md  (+1 more)
test/: .gitignore  Makefile  Makefile.am  Makefile.in  adjust_timeout.sh  alarm.sh  array.sh  builtins-cp.sh  builtins-cut.sh  builtins-mv.sh  builtins-paste.sh  builtins-sed.sh  builtins-tr.sh  builtins-wc.sh  builtins.sh  bulk-MOVED-default.sh  bulk-MOVED-flavor-all.sh  bulk-MOVED-flavor.sh  bulk-MOVED-to-default-flavor.sh  bulk-MOVED-to-specific-flavor.sh  bulk-bad-DEPENDS_ARGS.sh  bulk-bad-dep-pkgname.sh  bulk-build-FORCE_REBUILD_PACKAGES.sh  bulk-build-MOVED-BLACKLIST-flavor-all.sh  bulk-build-MOVED-default.sh  bulk-build-MOVED-flavor-all.sh  bulk-build-MOVED-flavor.sh  bulk-build-broken.sh  bulk-build-ignored.sh  bulk-build-inc-delete_old_pkg-changed-dep-pkgname.sh  bulk-build-inc-nested-dep-middle-unneeded-with-recursive-delete.sh  bulk-build-inc-nested-dep-middle-unneeded-without-recursive-delete-misordered.sh  bulk-build-inc-nested-dep-middle-unneeded-without-recursive-delete.sh  bulk-build-inc-pkg_no_version_for_deps_switch.sh  bulk-build-inc-pkgclean-flavor-default.sh  bulk-build-inc-pkgclean-flavor.sh  bulk-build-inc-pkgclean-origin.sh  bulk-build-inc-shlibs-buildrun-deps.sh  bulk-build-inc-shlibs-lib-deps.sh  bulk-build-inc-shlibs.sh  (+202 more)
test/etc/poudriere.d/: make.conf
test/ports/: Makefile
test/ports-dep-args/Mk/: bsd.ccache.mk  bsd.default-versions.mk  bsd.gcc.mk  bsd.java.mk  bsd.options.desc.mk  bsd.port.mk  bsd.port.pre.mk  bsd.sites.mk  bsd.tex.mk
test/ports-dep-args/Mk/Scripts/: depends-list.sh  do-depends.sh  find-lib.sh  makesum.sh  plist_sub_sed_sort.sh
test/ports-dep-args/Mk/Uses/: ada.mk  bdb.mk  compiler.mk  cpe.mk  cran.mk  display.mk  fam.mk  gnome.mk  kmod.mk  lua.mk  makeinfo.mk  mono.mk  mysql.mk  ncurses.mk  pear.mk  qmake.mk  scons.mk  sqlite.mk  ssl.mk  tar.mk  uidfix.mk
test/ports-dep-args/Tools/scripts/: MOVEDlint.awk  README  bump-revision.sh  checknewver.sh  chkversion.pl  portsvar.sh  psvn  rmport  splitpatch.pl  sunshar.rb
test/ports-dep-args/Tools/scripts/pkg-stash/: pkg-stash.pl
test/ports-dep-args/Tools/scripts/sunshar/: sunshar.1
test/ports-dep-args/devel/: Makefile
test/ports-dep-args/lang/python/: Makefile
test/ports-dep-args/lang/python27/: Makefile
test/ports-dep-args/lang/python3/: Makefile
test/ports-dep-args/lang/python33/: Makefile  Makefile.version
test/ports-dep-args/lang/python36/: Makefile
test/ports-dep-args/misc/: Makefile
test/ports-dep-args/ports-mgmt/: Makefile
test/ports/Mk/: bsd.ccache.mk  bsd.gcc.mk  bsd.gecko.mk  bsd.ldap.mk  bsd.licenses.db.mk  bsd.options.desc.mk  bsd.options.mk  bsd.port.mk  bsd.port.options.mk  bsd.port.post.mk  bsd.port.subdir.mk  bsd.qt.mk  bsd.sanity.mk  bsd.sdl.mk  bsd.sites.mk  bsd.wx.mk  bsd.xorg.mk
test/ports/Mk/Scripts/: cargo-crates.awk  check-vulnerable.sh  check_leftovers.sh  checksum.sh  create-manifest.sh  depends-list.sh  desktop-categories.sh  do-depends.sh  do-patch.sh  do-users-groups.sh  functions.sh  install-desktop-entries.sh  smart_makepatch.sh
test/ports/Mk/Uses/: azurepy.mk  bdb.mk  cargo.mk  cmake.mk  compiler.mk  erlang.mk  fmake.mk  fonts.mk  fortran.mk  fuse.mk  gecko.mk  gem.mk  gettext-tools.mk  ghostscript.mk  gnustep.mk  go.mk  gssapi.mk  horde.mk  iconv.mk  imake.mk  kde.mk  lazarus.mk  lha.mk  libedit.mk  libtool.mk  linux.mk  localbase.mk  makeinfo.mk  mate.mk  meson.mk  metaport.mk  mono.mk  ncurses.mk  ninja.mk  objc.mk  pathfix.mk  perl5.mk  pgsql.mk  pkgconfig.mk  pyqt.mk  (+8 more)
test/ports/Templates/: config.site
test/ports/Tools/: make_readmes
test/ports/Tools/scripts/: addport  bump_revision.pl  indent_make_if.pl  mark_safe.pl  neededlibs.sh  patchtool.py
test/ports/Tools/scripts/pkg-stash/: pkg-list.sh
test/ports/converters/: Makefile
test/ports/devel/autoconf-wrapper/: Makefile
test/ports/devel/automake-wrapper/: Makefile
test/ports/devel/ccache/: Makefile
test/ports/devel/gettext/: Makefile.common
test/ports/devel/gettext-runtime/: Makefile
test/ports/devel/gmake/: Makefile
test/ports/devel/m4/: Makefile
test/ports/devel/pkgconf/: Makefile
test/ports/devel/port_var_fetch1/: Makefile
test/ports/devel/port_var_fetch_syntax_error/: Makefile
test/ports/devel/readline/: Makefile
test/ports/lang/: Makefile
test/ports/lang/perl5.24/: Makefile
test/ports/lang/python/: Makefile
test/ports/lang/python2/: Makefile
test/ports/lang/python3/: Makefile
test/ports/lang/python34/: Makefile
test/ports/lang/python35/: Makefile  Makefile.version
test/ports/lang/python36/: Makefile  Makefile.version
test/ports/lang/python37/: Makefile  Makefile.version
test/ports/misc/: Makefile
test/ports/misc/foo/: Makefile
test/ports/misc/freebsd-release-manifests/: Makefile
test/ports/ports-mgmt/: Makefile
test/ports/ports-mgmt/poudriere-devel-IGNORED-and-skipped/: Makefile
test/ports/ports-mgmt/poudriere-devel-bad-dep_args/: Makefile
test/ports/ports-mgmt/poudriere-devel-dep-DEFAULT/: Makefile
test/ports/ports-mgmt/poudriere-devel-dep-FOO/: Makefile
test/ports/ports-mgmt/poudriere-devel-dep2-IGNORED/: Makefile
test/ports/ports-mgmt/yyyy/: Makefile
test/ports/print/indexinfo/: Makefile
test/ports/print/texinfo/: Makefile  pkg-install
test/ports/security/: Makefile
(+618 files in other folders)
